--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 acres==0.5.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.13
+aiohttp-retry==2.9.1
 aiosignal==1.3.2
 annotated-types==0.7.0
 anthropic==0.55.0
@@ -54,6 +55,7 @@ httpx==0.28.1
 httpx-sse==0.4.1
 huggingface-hub==0.33.0
 idna==3.10
+iniconfig==2.1.0
 jh2==5.0.9
 Jinja2==3.1.6
 jiter==0.10.0
@@ -65,6 +67,8 @@ langchain-anthropic==0.3.15
 langchain-community==0.3.26
 langchain-core==0.3.66
 langchain-openai==0.3.25
+langchain-pinecone==0.2.8
+langchain-tests==0.3.20
 langchain-text-splitters==0.3.8
 langcodes==3.5.0
 langdetect==1.0.9
@@ -115,6 +119,7 @@ pillow==11.2.1
 pinecone==7.2.0
 pinecone-plugin-assistant==1.7.0
 pinecone-plugin-interface==0.0.7
+pluggy==1.6.0
 pox==0.3.6
 ppft==1.7.7
 preshed==3.0.10
@@ -124,6 +129,7 @@ protobuf==6.31.1
 prov==2.1.1
 psycopg2-binary==2.9.10
 puremagic==1.29
+py-cpuinfo==9.0.0
 pyarrow==20.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -136,6 +142,12 @@ Pygments==2.19.2
 PyMuPDF==1.26.1
 pyparsing==3.2.3
 PyPDF2==3.0.1
+pytest==8.4.1
+pytest-asyncio==0.26.0
+pytest-benchmark==5.1.0
+pytest-codspeed==3.2.0
+pytest-recording==0.13.4
+pytest-socket==0.7.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-docx==1.2.0
@@ -170,6 +182,7 @@ sqlparse==0.5.3
 srsly==2.5.1
 svgwrite==1.4.3
 sympy==1.14.0
+syrupy==4.9.1
 tenacity==9.1.2
 thinc==8.3.6
 threadpoolctl==3.6.0
@@ -190,6 +203,7 @@ tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
 urllib3-future==2.13.900
+vcrpy==7.0.0
 wasabi==1.1.3
 wassima==1.2.2
 weasel==0.4.1
